src/test/ui/parser/raw/raw-byte-string-eof.stderr
error: unterminated raw string
  --> $DIR/raw-byte-string-eof.rs:2:5
   |
LL |     br##"a"#;
   |     ^^^^ unterminated raw string
help: you might have meant to end the raw string here
   |
LL |     br##"a"##;
   |           ^^^

error: aborting due to previous error

